# JarvisLT

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Pipfile  README.md  auth_google.py  config.yaml  debug_wake.py  debug_wake2.py  docker-compose.yml  install.ps1  main.py  pyproject.toml  start.bat
jarvis/audio/: listener.py  speaker.py  wake_word.py
jarvis/connectors/: home_assistant.py  places_tools.py  search_tools.py  web_crawler.py  web_tools.py
jarvis/core/: assistant.py
jarvis/dev_team/: __init__.py  agents.py  dev_team_tools.py  pipeline.py  project_store.py
jarvis/llm/: claude_client.py  memory.py
jarvis/memory/: entity_store.py  memory_manager.py  memory_tools.py  vector_store.py
jarvis/outsourcing/: __init__.py  agents.py  director.py  job_store.py  outsourcing_tools.py  profile.py  scraper.py
jarvis/outsourcing/portals/: __init__.py  toptal.py  upwork.py
jarvis/outsourcing/workers/: __init__.py  base.py  claude_file_worker.py  claude_worker.py  codex_worker.py  pool.py
jarvis/scheduler/: task_runner.py  task_store.py  task_tools.py
