[project]
name = "jarvis-lt"
version = "0.1.0"
description = "Jarvis-like voice assistant powered by Claude AI"
requires-python = ">=3.10"
dependencies = []  # managed via Pipfile / pipenv

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]
